# Apophis

./: README.md  apophis.py  apophis_ide.py  build_deb.sh  malbolge.py  pyproject.toml  test_apophis.py  test_apophis_ide.py
.github/workflows/: apophis-app.yml
packaging_tutorial/: README.md  pyproject.toml
packaging_tutorial/src/example_package_djlacavera21/: __init__.py
